# rusterize

./: .gitignore  .travis.yml  LICENSE  README.md
.github/workflows/: rust.yml
rusterize/: Cargo.toml  result
rusterize/src/: main.rs  test.rs
rusterize/src/math/: geometry.rs  mod.rs
rusterize/src/renderer/: mod.rs  rasterizer.rs  raytracer.rs  renderstructs.rs
rusterize/src/renderer/integrators/: ambient_occlusion.rs  depth_integrator.rs  mod.rs  normal_integrator.rs
rusterize/src/scene/: mod.rs
rusterize/src/test/: math_IUT.rs  mod.rs  renderstructs_IUT.rs  renderstructs_math_IUT.rs
rusterize/src/utils/: mod.rs
