[package]
name = "rusterize"
version = "0.1.0"
authors = ["Hyde46 <denis.heid@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
piston_window = "0.105.0"
find_folder = "0.3.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
image = "0.22.1"